k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinebook-ingress
  namespace: cinebook
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTP":80},{"HTTPS":443}]
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:560185625463:certificate/6af2a64e-6e93-43a0-915d-ea8bb975549e
spec:
  ingressClassName: alb
  rules:
    - host: learndevops01.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5000
    - host: auth.learndevops01.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
    - host: movie.learndevops01.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 5002
    - host: booking.learndevops01.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 5003
    - host: payment.learndevops01.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5004
